GCW-441 comment# Fixed scrollbar issue for the entire template customized the scrolling issue as per various resolution because we are using canvas and that behaves differently. Removed logo if the View-port height is less than 330px. increased font size for the body  content

--- a/app/styles/_custom_font_sizes.scss
+++ b/app/styles/_custom_font_sizes.scss
@@ -1,7 +1,7 @@
 body{
-  font-size: 0.9rem;
+  font-size: 1rem;
   @media #{$small-only} {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 a{
